@@ -3,4 +3,3 @@
 set -e
 
 autoreconf -if
-./configure
