@@ -1,3 +1,3 @@
-src/betaradio.c
-src/gstplay.c
-src/gstplay.h
+src/betaradio.vala
+src/json_soup.vala
+src/gst_player.vala
