@@ -1,0 +1,3 @@
+noinst_DATA = config.vapi
+
+EXTRA_DIST = $(noinst_DATA)
